# ipfs_evm

./: .contract-address.env  .env.default  .gitignore  Cargo.toml  Makefile  README.md  hardhat.config.js  package-lock.json  package.json
.cargo/: config.default.toml
.github/workflows/: rust.yml
cli/: Cargo.toml  build.rs
cli/src/: main.rs
cli/tests/: integration_test.rs
contracts/: CIDStore.sol
scripts/: deploy.ts
