[package]
edition = "2021"
name = "ipfs-evm"
version = "0.1.0"

[[bin]]
name = "ipfs-evm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"

# Used to store the Private Key
confy = "0.5.1"

# To save the private key the first time
inquire = "0.6.2"

# Multipart to comply with Infura API
reqwest = { version = "0.11", features = ["multipart"] }

# (Old) Specific version matching the one used in web3
secp256k1 = { version = "0.21.3" }
serde = "1.0.163"
tokio = { version = "1.28.2", features = ["full"] }
web3 = { version = "0.18.0", default-features = false, features = [
    "http-rustls-tls",
    "signing",
] }

[dev-dependencies]
mockito = "1.0.2"
serde_json = "1.0.96"
assert_cmd = "2.0.11"
predicates = "3.0.3"
